headers/RadarKit/RKFoundation.h

// Log
int RKLog(const char *, ...);
void RKExit(int);
// File operations (they just directly copied for ctypes to work)
FILE *RKFileOpen(const char *, const char *);
int RKFileClose(FILE *);
long RKFileTell(FILE *);
size_t RKFileGetSize(FILE *);
// Variables in rkGlobalParameters / Presentation
void RKSetStatusColor(const bool);
void RKSetWantColor(const bool);
void RKSetWantScreenOutput(const bool);
void RKSetUseDailyLog(const bool);
int RKSetProgramName(const char *);
int RKSetRootFolder(const char *) __attribute__ ((deprecated));
int RKSetLogfile(const char *);
int RKSetLogfileToDefault(void);
char *RKVersionString(void);
RKValueType RKGuessValueType(const char *);
bool RKGetSymbolFromFilename(const char *filename, char *symbol);
bool RKGetPrefixFromFilename(const char *filename, char *prefix);
int RKListFilesWithSamePrefix(const char *filename, char list[][RKMaximumPathLength]);
// Common numeric output
void RKShowName(void);
void RKShowTypeSizes(void);
void RKShowVecFloatLowPrecision(const char *name, const float *p, const int n);
void RKShowVecFloat(const char *name, const float *p, const int n);
void RKShowVecIQZ(const char *name, const RKIQZ *p, const int n);
void RKShowVecComplex(const char *name, const RKComplex *p, const int n);
void RKShowArray(const RKFloat *data, const char *letter, const int width, const int height);
char *RKStringFromValue(const void *value, RKValueType type);
char *RKVariableInString(const char *name, const void *value, RKValueType type);
size_t RKPrettyStringSizeEstimate(const char *);
size_t RKPrettyStringFromKeyValueString(char *, const char *);
void RKZeroOutFloat(RKFloat *data, const uint32_t capacity);
void RKZeroOutIQZ(RKIQZ *data, const uint32_t capacity);
void RKZeroTailFloat(RKFloat *data, const uint32_t capacity, const uint32_t origin);
void RKZeroTailIQZ(RKIQZ *data, const uint32_t capacity, const uint32_t origin);
// Pulse
size_t RKPulseBufferAlloc(RKBuffer *, const uint32_t capacity, const uint32_t count);
void RKPulseBufferFree(RKBuffer);
RKPulse *RKGetPulseFromBuffer(RKBuffer, const uint32_t pulseIndex);
RKInt16C *RKGetInt16CDataFromPulse(RKPulse *, const uint32_t);
RKComplex *RKGetComplexDataFromPulse(RKPulse *, const uint32_t);
RKIQZ RKGetSplitComplexDataFromPulse(RKPulse *, const uint32_t);